--- a/frontend/mc855/pubspec.yaml
+++ b/frontend/mc855/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2 
   file_picker: ^5.2.0
+  http: ^0.13.5
   
 dev_dependencies:
   flutter_test:
